refactor(telemetry): the catalogue stops promising an order it does not keep
Motivation:
The previous round replaced `Map.copyOf` with `Collections.unmodifiableMap` so that the group order
a catalogue is written in would survive into `allHotPath()`. It does not, and never did: both
production catalogues hand this constructor a `Map.ofEntries(...)`, whose iteration order is salted
per JVM run, so the order was gone before the copy started. The test passed because it built its own
`LinkedHashMap` — it proved the constructor and not the call site.

Withdrawing the guarantee rather than delivering it, because nothing consumes it. `allHotPath()` has
one caller and it collects into a `TreeSet`; `warmHotPath` reads `hotPathFor(name)`, whose per-group
list order `List.copyOf` preserves regardless. The guarantee was added for a report that does not
exist.

Modification:
Back to `Map.copyOf(copied)`. The deep copy stays — that one is real, and the comment now says only
what it does: `Map.copyOf` alone would share the value lists, and the staging `LinkedHashMap` makes
the copy itself deterministic without promising anything downstream. `allHotPath()`'s javadoc states
that the group order is undefined and that a caller wanting a stable sequence sorts it.
`allHotPathKeepsDeclarationOrder` is deleted.

Result:
No behaviour change — the order was already undefined. What goes is a javadoc guarantee the code did
not keep and a test that could not have caught that, since it never exercised the path the
production catalogues take.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>